remove first line from dropdown menu, fix z-index, add local jquery

--- a/sites/www.openstreetmap.de/var/www/www.openstreetmap.de/map_src/style.css
+++ b/sites/www.openstreetmap.de/var/www/www.openstreetmap.de/map_src/style.css
@@ -184,7 +184,7 @@ a.menu::after, .dropdown-toggle::after {
   position: absolute;
   top: 100%;
   left: 0;
-  z-index: 1000;
+  z-index: 1337;
   display: none;
   float: left;
   min-width: 400px;
